<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="159dp"
            android:layout_height="144dp"
            android:layout_gravity="center"
            android:background="@drawable/corner_round"
            android:contentDescription="TODO"
            android:src="@drawable/image_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/reg_form"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
            android:hint="@string/name"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck"
            android:inputType="text"/>

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
            android:hint="@string/username"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck"
            android:inputType="text"/>

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:hint="@string/password"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/corner_round"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="175dp"
            android:text="Copyrights &#169; JTech Pvt Ltd, Lahore"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>