<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="159dp"
            android:layout_height="144dp"
            android:layout_gravity="center"
            android:background="@drawable/corner_round"
            android:contentDescription="TODO"
            android:src="@drawable/image_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear2"
        android:layout_below="@+id/linear1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login"
            android:text="@string/login_form"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textColor="@color/blue"/>

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_baseline_account_circle_24"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:hint="Enter Passwords" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/corner_round"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="208dp"
            android:text="Copyrights &#169; JTech Pvt Ltd, Lahore"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>